Refactoring of plugin structure
